<resources>
    <string name="app_name">ZutRoulette</string>

    <string name="header_login">ZUT Roulette</string>
    <string name="login">Pseudonim</string>
    <string name="login_hint">Pseudonim</string>
    <string name="talk">Rozpocznij rozmowę</string>
    <string name="invalid_login">Pseudonim powinien zawierać tylko cyfry i litery. \n</string>

    <string name="send">Wyślij</string>
    <string name="next">Dalej</string>
    <string name="messageHint">Aaaa</string>
    <string name="blank_text">Blank text.</string>
    <string name="author">Author</string>
    <string name="user_is_logged">Spokojnie, szukamy dla Ciebie chatu.</string>
    <string name="text_to_short">uzupełnij tekst.</string>
    <string name="talk_with">Rozmawiasz z</string>
    <string name="stranger_disconected">Czat zakończył się.</string>
    <string name="logo_desc">ZutRuletteLogo</string>
</resources>
