<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="400dp"
        android:layout_height="470dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/rounded_edittext"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_messages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />



    </LinearLayout>

    <TextView
        android:id="@+id/chat_fragment_tv_stranger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/talk_with"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textColor="@color/stranger"
        app:layout_constraintHorizontal_bias="0.70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <EditText
        android:id="@+id/chat_fragment_et_text"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:paddingLeft="6dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/messageHint"
        android:inputType="textPersonName"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="LabelFor,UnknownId" />

    <Button
        android:id="@+id/chat_fragment_btn_send"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/send"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintStart_toEndOf="@+id/editText2"
        app:layout_constraintTop_toTopOf="@+id/chat_fragment_et_text"
        app:layout_constraintVertical_bias="0.912"
        tools:ignore="UnknownId" />

    <Button
        android:id="@+id/chat_fragment_btn_next"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/chat_fragment_et_text"
        app:layout_constraintTop_toBottomOf="@+id/chat_fragment_btn_send" />

    <ProgressBar
        android:id="@+id/chat_fragment_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407" />


</androidx.constraintlayout.widget.ConstraintLayout>